--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@angular/elements": "^19.2.3",
-    "@module-federation/nextjs-mf": "^8.8.20",
     "axios": "^1.8.4",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
@@ -19,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@module-federation/nextjs-mf": "^8.8.21",
     "@tailwindcss/postcss": "^4",
     "@types/axios": "^0.9.36",
     "@types/node": "^20",
@@ -27,6 +27,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.98.0"
   }
 }
